--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@
 version: '3.8'
 services:
  auth:
-  image: backend_pmt 
+  image: backend_pmt-dev 
   ports:
    - 8080:8080
   container_name: pmt_backend
